--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bluebird": "^3.2.1",
     "lodash": "^4.2.1",
     "read": "^1.0.7",
-    "request": "^2.69.0"
+    "request": "^2.69.0",
+    "shelljs": "^0.5.3"
   }
 }
